--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1>Welcome to My Flask App</h1>
-    <p><a href="{{ url_for('stats_image') }}">View Stats Image</a></p>
+    <a href="{{ url_for('stats_image') }}">View Stats Image</a><br>
+
+    {{ user }}
+    <a href="{{ url_for('login') }}">Login</a><br>
+
 </body>
 </html>
