--- a/templates/activities.html
+++ b/templates/activities.html
@@ -21,7 +21,7 @@
         <tbody>
             {% for activity in activities %}
             <tr>
-                <td>{{ activity.id }}</td>
+                <td>{{ activity.activity_id }}</td>
                 <td>{{ activity.name }}</td>
                 <td>{{ activity.distance }}</td>
                 <td>{{ activity.moving_time }}</td>
