--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,7 @@
 
     {{ user }}
     <a href="{{ url_for('login') }}">Login</a><br>
+    <a href="{{ url_for('profile') }}">Profile</a><br>
 
 </body>
 </html>
