--- a/templates/index.html
+++ b/templates/index.html
@@ -1,18 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flask App</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
-</head>
-<body>
-    <h1>Welcome to My Flask App</h1>
-    <a href="{{ url_for('stats_image') }}">View Stats Image</a><br>
+{% extends "base.html" %}
+
+{% block title %}Home{% endblock %}
+
+{% block content %}
+    <section class="hero">
+
+        <a href="{{ url_for('stats_image') }}">View Stats Image</a><br>
 
     {{ user }}
     <a href="{{ url_for('login') }}">Login</a><br>
     <a href="{{ url_for('profile') }}">Profile</a><br>
 
-</body>
-</html>
+    <form action="/login" method="post" class="form-container">
+        <input type="submit" value="Login">
+    </form>
+
+    </section>
+{% endblock %}
