--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
 
         <a href="{{ url_for('authorize_strava') }}">Authorize Strava</a><br>
         <a href="{{ url_for('profile') }}">Profile</a><br>
-        <a href="{{ url_for('activities') }}">Activities</a><br>
+        <a href="{{ url_for('activities_js') }}">Activities</a><br>
 
     <form action="/login" method="post" class="form-container">
         <input type="submit" value="Login">
