--- a/templates/refresh_activities.html
+++ b/templates/refresh_activities.html
@@ -26,7 +26,7 @@
 
                 if (data.progress === 100) {
                     eventSource.close();
-                    window.location.href = '/'; // Redirect to home
+                    // window.location.href = '/'; // Redirect to home
                 }
             };
 
