--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
     <section class="hero">
 
         <a href="{{ url_for('stats_image') }}">View Stats Image</a><br>
+        <a href="{{ url_for('stats_html') }}">Stats html</a><br>
 
         {{ user }}
 
