--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,7 @@
 
         <a href="{{ url_for('authorize_strava') }}">Authorize Strava</a><br>
         <a href="{{ url_for('profile') }}">Profile</a><br>
+        <a href="{{ url_for('user_strawall_list') }}">Your strawalls</a><br>
         <a href="{{ url_for('activities_js') }}">List activities</a><br>
         <a href="{{ url_for('refresh_activities_page') }}">Refresh Activities</a><br>
 
