--- a/templates/user_strawall_edit.html
+++ b/templates/user_strawall_edit.html
@@ -122,7 +122,7 @@
     </tbody>
 </table>
 
-<iframe src="http://home:5000/stats_html" id="dynamicIframe"></iframe>
+<iframe src="/user/strawall/edit/{{ guid }}?mode=edit" id="dynamicIframe"></iframe>
 
 <script>
     function adjustIframeSize() {
